--- a/client-gate-root-config/src/index.ejs
+++ b/client-gate-root-config/src/index.ejs
@@ -10,35 +10,34 @@
       content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';"
     />
     <meta name="importmap-type" use-injector />
-    <!-- If you wish to turn off import-map-overrides for specific environments (prod), uncomment the line below -->
-    <!-- More info at https://github.com/single-spa/import-map-overrides/blob/main/docs/configuration.md#domain-list -->
-    <!-- <meta name="import-map-overrides-domains" content="denylist:prod.example.com" /> -->
 
-    <!-- Shared dependencies go into this import map -->
-    <script type="injector-importmap">
-      {
-        "imports": {
-          "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@6.0.3/lib/es2015/esm/single-spa.min.js"
-        }
-      }
-    </script>
     <link
       rel="preload"
       href="https://cdn.jsdelivr.net/npm/single-spa@6.0.3/lib/es2015/esm/single-spa.min.js"
       as="module"
     />
+    <link
+      rel="preload"
+      href="https://cdn.jsdelivr.net/npm/vue@3.5.13/dist/vue.esm-browser.js"
+      as="module"
+    />
 
-    <!-- Add your organization's prod import map URL to this script's src  -->
-    <!-- <script type="injector-importmap" src="/importmap.json"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/system.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/amd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/named-exports.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/systemjs@6.8.3/dist/extras/use-default.min.js"></script>
 
     <% if (isLocal) { %>
     <script type="injector-importmap">
       {
         "imports": {
           "@client-gate/root-config": "//localhost:9000/client-gate-root-config.js",
-          "@single-spa/welcome": "https://cdn.jsdelivr.net/npm/single-spa-welcome/dist/single-spa-welcome.min.js",
+
           "@client-gate/client-gate-layout": "//localhost:9001/js/app.js",
-          "@client-gate/client-gate-shared-dependency": "//localhost:9003/client-gate-client-gate-shared-dependency.js"
+          "@client-gate/client-gate-shared-dependency": "//localhost:9003/client-gate-client-gate-shared-dependency.js",
+
+          "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@6.0.3/lib/es2015/esm/single-spa.min.js",
+          "vue": "https://cdn.jsdelivr.net/npm/vue@3.5.13/dist/vue.esm-browser.js"
         }
       }
     </script>
